--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "client",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": "true",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "webpack-watch": "webpack -w"
   },
   "keywords": [],
   "author": "",
